--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,9 @@
 [project]
 name = "kagi"
 version = "0.1.0"
+authors = [
+    {name="Rehan Ali Rana", email="rehan@kagi.com"},
+]
 description = "Kagi MPC server"
 readme = "README.md"
 requires-python = ">=3.12"
@@ -11,8 +14,12 @@ dependencies = [
     "pydantic>=2.10.3",
 ]
 
+[project.urls]
+Homepage = "https://github.com/kagisearch/kagi-mcp"
+Issues = "https://github.com/kagisearch/kagi-mcp/issues"
+
 [build-system]
-requires = [ "hatchling",]
+requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [project.scripts]
