--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "kagi"
+name = "kagimcp"
 version = "0.1.0"
 authors = [
     {name="Rehan Ali Rana", email="rehan@kagi.com"},
@@ -23,4 +23,4 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [project.scripts]
-kagi = "kagi:main"
+kagimcp = "kagimcp:main"
