--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,3 +21,6 @@ Issues = "https://github.com/kagisearch/kagi-mcp/issues"
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+
+[project.scripts]
+kagimcp = "kagimcp:main"
